--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^2.8.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.6.0",
     "md5": "^2.3.0",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.1",
     "@types/md5": "^2.3.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
